<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreUsu"/>

    <EditText
        android:id="@+id/apellidosUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellidosUsu"/>

    <EditText
        android:id="@+id/correoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"/>


    <EditText
        android:id="@+id/contrasenaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrasenaUsu"/>

    <EditText
        android:id="@+id/confirmarContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmarContra"/>

    <Button
        android:id="@+id/registrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"/>

</LinearLayout>